# loam

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: CONSUMPTION_PRD.md  GLOSSARY.md  IMPLEMENTATION_PLAN.md  P0_EXECUTION_PLAN.md  P0_EXPERIMENT_PROTOCOL.md  SUPPLY_PRD.md
docs/adr/: 0001-cross-family-census-by-default.md  0002-v1-no-external-telemetry-dependency.md  0002-v1-no-tracestore-dependency.md  0003-rediscovery-premise-is-measured-hypothesis.md  0004-p0-gate-weights-soft-and-anchor-type.md  0005-backend-agnostic-endpoint-abstraction.md  0006-rust-demand-python-supply-artifact-seam.md  0007-override-p0-gate-build-loam-core.md  0008-anchor-hash-canonicalization.md
src/: assemble.rs  bundle.rs  concept.rs  get.rs  lib.rs  main.rs  observe.rs  search.rs  spool.rs
tests/: cli.rs
tests/fixtures/sample_repo/loam/: _index.md  dangling.md  greeting-contract.md  stale-example.md
tests/fixtures/sample_repo/src/deep/: marker.txt
