[package]
name = "loam"
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
description = "loam-core: the demand-side CLI over an OKF bundle (ADR-0006). Built ahead of P0 per ADR-0007."

[lib]
name = "loam_core"
path = "src/lib.rs"

[[bin]]
name = "loam"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
